--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -34,11 +34,10 @@
     border-style: solid;
 }
 
-
-.nestedGrid {
-    display: flex;
-    z-index: 5;
-    border-style: solid;
-    border-color: red;
+.center {
+  
+   z-index: 1;
 }
+
+
 
